cmake_minimum_required(VERSION 3.20)
project(dataStructure)

set(CMAKE_CXX_STANDARD 14)

#add_executable(dataStructure main.cpp question136.cpp question136.h Question169.cpp Question169.h Question15.cpp Question15.h Question75.cpp Question75.h Question56.cpp Question56.h Question706.cpp Question706.h Question119.cpp Question119.h Question48.cpp Question48.h headers.h Question415.cpp Question415.h Question409.cpp Question409.h Question59.cpp Question59.h Question240.cpp Question240.h Question435.cpp Question435.h Question290.cpp Question290.h)
add_executable(dataStructure main.cpp MultiQuestions.cpp MultiQuestions.h t-rex.cpp MyHashTable.cpp MyHashTable.h MinStack.cpp MinStack.h t-rex.h AVL.cpp AVL.h RedBlackTree.cpp RedBlackTree.h)
